Criando pagina do produto.

--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -31,9 +31,9 @@
 
             </div>
             <div id="container-title-header-co">
-                <% for (let cat of co){ %>
+                <% for (let prod of co){ %>
                 <ul id="header-li-inf">
-                    <li class="h-li-inf"><a href="/products/<%=cat.category_opt_singular%>"><b><%=cat.category_opt_plural%></b></a></li>
+                    <li class="h-li-inf"><a href="/products/<%=prod.category_opt_singular%>"><b><%=prod.category_opt_plural%></b></a></li>
                 </ul>
                 <% } %>
             </div>
