--- a/src/views/product.ejs
+++ b/src/views/product.ejs
@@ -7,15 +7,15 @@
                     <b><%=title.title_impact_2%></b>
                 </h1>
             </span>
-            <div id="container-home-produtos">
+            <div id="container-home-produtos-product">
                 <% for(let prod of pm) { %>
-                <div class="home-produtos">
+                <div class="home-produtos-product">
                     <h3><%=prod.category%></h3>
                     <h2><%=title.title_impact_3%></h2>
                     <span><strong>de </strong>R$:<%=prod.salePrice%> Por R$:<%=prod.specialPrice%></span>
 
-                    <div class="home-produtos-image">
-                        <img class="h-produtos-image" src="<%=prod.img%>" alt="">
+                    <div class="home-produtos-image-product">
+                        <img class="h-produtos-image-product" src="<%=prod.img%>" alt="">
                     </div>
                 </div>
                 <% } %>
