Separando a informação endereço e numero e arrumando categoryRecord, resolvido.

--- a/src/views/userDelete.ejs
+++ b/src/views/userDelete.ejs
@@ -38,7 +38,10 @@
                     <label class="form-label" for="genre-id">Gênero: </label><%=userResult.genre%>
                 </div>
                 <div>
-                    <label class="form-label" for="addressNumber-id">Rua e numero: </label><%=userResult.addressNumber%>
+                    <label class="form-label" for="address-id">Endereço: </label><%=userResult.address%>
+                </div>
+                <div>
+                    <label class="form-label" for="number-id">Numero: </label><%=userResult.number%>
                 </div>
                 <div>
                     <label class="form-label" for="district-id">Bairro: </label><%=userResult.district%>
