--- a/src/views/userEdit.ejs
+++ b/src/views/userEdit.ejs
@@ -48,8 +48,12 @@
                     <input value="<%=userResult.genre%>" type="text" class="form-control" name="genre" id="genre-id" placeholder="Gênero ex. 'Masculino, etc...'">
                 </div>
                 <div>
-                    <label class="form-label" for="addressNumber-id">Rua e numero</label>
-                    <input value="<%=userResult.addressNumber%>" type="text" class="form-control" name="addressNumber" id="addressNumber-id" placeholder="Rua e numero ex. 'Rua district'">
+                    <label class="form-label" for="address-id">Endereço</label>
+                    <input value="<%=userResult.address%>" type="text" class="form-control" name="address" id="address-id" placeholder="Endereço ex. 'Rua district'">
+                </div>
+                <div>
+                    <label class="form-label" for="number-id">Numero</label>
+                    <input value="<%=userResult.number%>" type="text" class="form-control" name="number" id="number-id" placeholder="Numero ex. '43'">
                 </div>
                 <div>
                     <label class="form-label" for="district-id">Bairro</label>
