--- a/src/views/userRecord.ejs
+++ b/src/views/userRecord.ejs
@@ -46,8 +46,12 @@
                     <input type="radio" class="form-control"  value="naoinformar" name="genre" id="genre-id">Não informar
                 </div>
                 <div>
-                    <label class="form-label" for="addressNumber-id"><span>*</span>Rua e numero</label>
-                    <input type="text" class="form-control" name="addressNumber" id="addressNumber-id" placeholder="Rua e numero">
+                    <label class="form-label" for="address-id"><span>*</span>Endereço</label>
+                    <input type="text" class="form-control" name="address" id="address-id" placeholder="Enrereço">
+                </div>
+                <div>
+                    <label class="form-label" for="number-id"><span>*</span>Numero</label>
+                    <input type="text" class="form-control" name="number" id="number-id" placeholder="Numero">
                 </div>
                 <div>
                     <label class="form-label" for="district-id"><span>*</span>Bairro</label>
