--- a/src/views/userShow.ejs
+++ b/src/views/userShow.ejs
@@ -37,7 +37,10 @@
                     <label class="form-label" for="genre-id">Gênero: </label><%=user.genre%>
                 </div>
                 <div>
-                    <label class="form-label" for="addressNumber-id">Rua e numero: </label><%=user.addressNumber%>
+                    <label class="form-label" for="addressNumber-id">Endereço: </label><%=user.address%>
+                </div>
+                <div>
+                    <label class="form-label" for="addressNumber-id">numero: </label><%=user.number%>
                 </div>
                 <div>
                     <label class="form-label" for="district-id">Bairro: </label><%=user.district%>
