--- a/src/views/categoryRecord.ejs
+++ b/src/views/categoryRecord.ejs
@@ -6,11 +6,11 @@
             <form action="/record/cat/recorded" method="post">
                 <div>
                     <label class="form-label" for="category_opt_singular-id">Categoria Singular</label>
-                    <input value="<%=co.category_opt_singular%>" type="text" class="form-control" name="category_opt_singular" id="category_opt_singular-id" placeholder="Tipo de item ex. 'Caneca'">
+                    <input type="text" class="form-control" name="category_opt_singular" id="category_opt_singular-id" placeholder="Tipo de item ex. 'Caneca'">
                 </div>
                 <div>
                     <label class="form-label" for="category_opt_plural-id">Categoria Plural</label>
-                    <input value="<%=co.category_opt_plural%>" type="text" class="form-control" name="category_opt_plural" id="category_opt_plural-id" placeholder="Tipo de item ex. 'Canecas'">
+                    <input type="text" class="form-control" name="category_opt_plural" id="category_opt_plural-id" placeholder="Tipo de item ex. 'Canecas'">
                 </div>
                 <button type="submit" class="btn-btn-primary">Cadastrar</button>
             </form>
