colocando icone na aba do navegador em todas as views.

--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="imagem/png" href="/img/Logo para camiseta preta MOD 1.png">
     <link rel="stylesheet" href="/css/homePage.css">
     <link rel="stylesheet" href="/css/product.css">
     <title><%= title %></title>
@@ -24,9 +25,9 @@
                         </form>
                     </div>
                     <ul id="header-li-sup">
-                        <li class="h-li-sup"><img src="/img/conta.png" alt="" width="34" hiegth="34"><a href="/contato"><b><%=hcl.title_position_1%></b></a></li>
-                        <li class="h-li-sup"><img src="/img/pedidos.png" alt="" width="34" hiegth="34"><a href="/pedidos"><b><%=hcl.title_position_2%></b></a></li>
-                        <li class="h-li-sup"><img src="/img/carrinho.svg" alt="" width="37" hiegth="37"><a href="/carrinho"><b><%=hcl.title_position_3%></b></a></li>
+                        <li class="h-li-sup"><a href="/contato"><img src="/img/conta.png" alt="" width="34" hiegth="34"></a><a href="/contato"><b><%=hcl.title_position_1%></b></a></li>
+                        <li class="h-li-sup"><a href="/pedidos"><img src="/img/pedidos.png" alt="" width="34" hiegth="34"></a><a href="/pedidos"><b><%=hcl.title_position_2%></b></a></li>
+                        <li class="h-li-sup"><a href="/carrinho"><img src="/img/carrinho.svg" alt="" width="37" hiegth="37"></a><a href="/carrinho"><b><%=hcl.title_position_3%></b></a></li>
                     </ul>
                 </div>
 
